fixin issue while loading grid
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C43400

--- a/CarrierPortal/Code/PartnerPortal.CustomerAccess.Web/PartnerPortal_CustomerAccess/Elements/DID/Directives/Templates/DIDTileRuntimeSettings.html
+++ b/CarrierPortal/Code/PartnerPortal.CustomerAccess.Web/PartnerPortal_CustomerAccess/Elements/DID/Directives/Templates/DIDTileRuntimeSettings.html
@@ -5,7 +5,8 @@
                  dataretrievalfunction="dataRetrievalFunction"
                  menuactions="menuActions"
                  pagingtype="'Pager'"
-                 idfield="AccountName" enableautoexport="true" normalcell>
+                 enableautoexport="true"
+                 normalcell>
         <vr-datagridcolumn headertext="'DIDs'" type="'Text'" field="'Description'">  </vr-datagridcolumn>
         <vr-datagridcolumn headertext="'Account Name'" type="'Text'" field="'AccountName'"></vr-datagridcolumn>
 
