refactored Multinet Bridge convertors
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C43401

--- a/Retail/Code/Retail.MultiNet.Web/Retail_MultiNet/Directives/Account/Templates/AccountConvertorEditor.html
+++ b/Retail/Code/Retail.MultiNet.Web/Retail_MultiNet/Directives/Account/Templates/AccountConvertorEditor.html
@@ -63,7 +63,7 @@
         <vr-textbox value="scopeModel.billingPeriodColumnName" label="Billing Period Column Name" isrequired="true"></vr-textbox>
     </vr-columns>
     <vr-columns width="1/3row">
-        <vr-textbox value="scopeModel.accountContractID" label="GP Id Column Name" isrequired="true"></vr-textbox>
+        <vr-textbox value="scopeModel.accountContractID" label="Contract Id Column Name" isrequired="true"></vr-textbox>
     </vr-columns>
 </vr-section>
 <vr-section header="Address Columns" collapsible>
