--- a/Vanrise/Code/Vanrise.Invoice.Web/VR_Invoice/Directives/Extensions/VRObjectTypes/Templates/InvoicePropertyEvaluatorTemplate.html
+++ b/Vanrise/Code/Vanrise.Invoice.Web/VR_Invoice/Directives/Extensions/VRObjectTypes/Templates/InvoicePropertyEvaluatorTemplate.html
@@ -7,6 +7,9 @@
                label="Invoice Field">
     </vr-select>
 </vr-columns>
+<vr-columns width="1/2row">
+    <vr-switch value="scopeModel.useDescription" label="Use Description"></vr-switch>
+</vr-columns>
 <vr-columns width="1/2row" ng-show="scopeModel.isCustomFieldRequired()">
     <vr-genericdata-datarecordtypefields-selector on-ready="scopeModel.onDataRecordFieldsSelectorReady"
                                                   isrequired="scopeModel.isCustomFieldRequired()">
