--- a/Vanrise/Code/Vanrise.Invoice.Web/VR_Invoice/Views/Runtime/InvoiceEmailTemplate.html
+++ b/Vanrise/Code/Vanrise.Invoice.Web/VR_Invoice/Views/Runtime/InvoiceEmailTemplate.html
@@ -20,6 +20,16 @@
                     </vr-row>
                     <vr-row removeline>
                         <vr-columns width="fullrow">
+                            <vr-label >Attachments</vr-label>
+                        </vr-columns>
+                        <vr-columns width="fullrow">
+                            <vr-datalist maxitemsperrow="3" datasource="scopeModel.attachments" >
+                                <a style="cursor:pointer" ng-click="viewScope.scopeModel.onAttachmentItemClicked(dataItem)"> {{dataItem.AttachmentName}}</a>
+                            </vr-datalist>
+                        </vr-columns>
+                    </vr-row>
+                    <vr-row removeline>
+                        <vr-columns width="fullrow">
                             <vr-textbox type="text" label="Subject" value="scopeModel.subject" isrequired="true"></vr-textbox>
                         </vr-columns>
                     </vr-row>
