Add SalePricelistFileNamePattern for System and Customer
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C43441

--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/Settings/Templates/PriceListSettingsTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/Settings/Templates/PriceListSettingsTemplate.html
@@ -48,3 +48,11 @@
         </vr-whs-be-codechangetypesettings-grid>
     </vr-columns>
 </vr-row>
+<vr-row>
+        <vr-whs-be-salepricelistfilenamepattern on-ready="ctrl.onFileNamePatternReady"
+                                                normal-col-num="6"
+                                                ng-if="ctrl.showFileNamePattern"
+                                                isrequired="ctrl.isFileNamePatternRequired">
+        </vr-whs-be-salepricelistfilenamepattern>
+  
+</vr-row>
