--- a/CarrierPortal/Code/PartnerPortal.Invoice.Web/PartnerPortal_Invoice/Elements/Invoice/Views/InvoiceManagement.html
+++ b/CarrierPortal/Code/PartnerPortal.Invoice.Web/PartnerPortal_Invoice/Elements/Invoice/Views/InvoiceManagement.html
@@ -1,11 +1,11 @@
-﻿<vr-panel ng-controller="PartnerPortal_Invoice_InvoiceManagementController">
+﻿<vr-panel ng-controller="PartnerPortal_Invoice_InvoiceManagementController" >
     <vr-form name="formFilter">
-        <div ng-hide="filterSectionCollapsed" vr-loader="isLoadingFilters">
-            <vr-row removeline>
+        <div ng-hide="filterSectionCollapsed">
+            <vr-row removeline vr-loader="scopeModel.isLoadingFilters">
                 <partnerportal-invoice-invoiceviewertype-selector on-ready="onInvoiceViewerTypeSelectorReady" isrequired="true" normal-col-num="2" onselectionchanged=" onInvoiceViewerTypeSelectorSelectionChanged"></partnerportal-invoice-invoiceviewertype-selector>
                 <partnerportal-invoice-selector on-ready="onInvoiceAccountsSelectorReady" normal-col-num="2" ismultipleselection></partnerportal-invoice-selector>
 
-                  <vr-columns width="normal">
+                <vr-columns width="normal">
                     <vr-datetimepicker type="date" label="From" value="fromDate" isrequired="true"></vr-datetimepicker>
                 </vr-columns>
                 <vr-columns width="normal">
