--- a/QualityMeasurement/Code/QM.CLITester.Web/QM_CLITester/Views/HistoryTestCall/HistoryTestCallManagement.html
+++ b/QualityMeasurement/Code/QM.CLITester.Web/QM_CLITester/Views/HistoryTestCall/HistoryTestCallManagement.html
@@ -13,7 +13,7 @@
             </vr-row>
             <vr-row removeline colnum="fullrow">
                 <vr-columns width="normal">
-                    <vr-datetimepicker type="dateTime" label="From:" value="fromDate" isrequired></vr-datetimepicker>
+                    <vr-datetimepicker type="dateTime" label="From:" value="fromDate" isrequired="true"></vr-datetimepicker>
                 </vr-columns>
 
                 <vr-columns width="normal">
