Add parameter deleted to Rate Change Type
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C43456

--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/Settings/Templates/CodeChangeTypeSettingsGridTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/Settings/Templates/CodeChangeTypeSettingsGridTemplate.html
@@ -1,6 +1,7 @@
 ﻿<vr-datagrid on-ready="scopeModel.onGridReady"
              datasource="scopeModel.gridData"
-             dataretrievalfunction="scopeModel.dataRetrievalFunction">
+             dataretrievalfunction="scopeModel.dataRetrievalFunction"
+             hidegridmenu>
     <vr-datagridcolumn headertext="'Code Change Type'" field="'CodeChangeType.label'" type="'Text'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Descriptions'" field="'CodeChangeTypeDescription'">
         <vr-textbox type="text" value="dataItem.CodeChangeTypeDescription" isrequired="dataItem.isrequired"></vr-textbox>
