--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/Settings/Templates/RateChangeTypeSettingsGridTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/Settings/Templates/RateChangeTypeSettingsGridTemplate.html
@@ -1,6 +1,7 @@
 ﻿<vr-datagrid on-ready="scopeModel.onGridReady"
              datasource="scopeModel.gridData"
-             dataretrievalfunction="scopeModel.dataRetrievalFunction">
+             dataretrievalfunction="scopeModel.dataRetrievalFunction"
+             hidegridmenu>
     <vr-datagridcolumn headertext="'Rate Change Type'" field="'RateChangeType.description'" type="'Text'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Descriptions'" field="'RateChangeTypeDescription'">
         <vr-textbox type="text" value="dataItem.RateChangeTypeDescription" isrequired="dataItem.isrequired"></vr-textbox>
