Refactoring invoice in portal and implementing grid columns settings
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C43469

--- a/CarrierPortal/Code/PartnerPortal.Invoice.Web/PartnerPortal_Invoice/Elements/InvoiceViewerType/Directives/Templates/GridColumnsEditor.html
+++ b/CarrierPortal/Code/PartnerPortal.Invoice.Web/PartnerPortal_Invoice/Elements/InvoiceViewerType/Directives/Templates/GridColumnsEditor.html
@@ -9,6 +9,8 @@
                 <span ng-if="scopeModel.isCustomFieldRequired()">
                     <partnerportal-invoice-invoicecustomfield-remoteselector isrequired="scopeModel.isCustomFieldRequired()" on-ready="scopeModel.onInvoiceCustomFieldSelectorReady" selectedvalues="scopeModel.selectedRecordField" normal-col-num="6"></partnerportal-invoice-invoicecustomfield-remoteselector>
                 </span>
+                <vr-common-gridcolumnwidth-editor on-ready="scopeModel.onGridWidthFactorEditorReady" normal-col-num="6"></vr-common-gridcolumnwidth-editor>
+
             </vr-row>
         </vr-form>
     </vr-modalbody>
