remove vr-alert bootstrap margin
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C43474

--- a/Vanrise/Code/Vanrise.Web/Client/Styles/Styles.css
+++ b/Vanrise/Code/Vanrise.Web/Client/Styles/Styles.css
@@ -2370,7 +2370,8 @@ vr-label[hasbackgroundcolor] .vr-control-label {
 }
 
 label[vr-alert].alert {   
-   padding:5px
+   padding:5px;
+   margin:0px;
 }
 .permmesion-background {
     background: url("../../Client/Images/bichartpermission.jpg") center no-repeat;
