adding UI for multiple pricelist by currency
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C43479

--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/SalePriceList/Templates/SalePricelistFilePreviewTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/SalePriceList/Templates/SalePricelistFilePreviewTemplate.html
@@ -1,10 +1,9 @@
-﻿<vr-datagrid datasource="salepricelistFilePreview"
+﻿<vr-datagrid datasource="ctrl.datasource"
              on-ready="onGridReady"
-             dataretrievalfunction="dataRetrievalFunction"
              pagingtype="'PagingOnScroll'"
              menuactions="gridMenuActions"
              enableautoexport="true" defaultsortbyfieldname="ctrl.defaultSortByFieldName" defaultsortdirection="ctrl.defaultSortDirection">
-
-    <vr-datagridcolumn headertext="'File Name'" field="'FileName'" type="'Text'"></vr-datagridcolumn>
-    <vr-datagridcolumn headertext="'Currency'" field="'Currency'" type="'Text'"></vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'ID'" field="'FileId'" type="'Text'"></vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'File Name'" field="'FileName'" type="'Text'" onclicked="downloadPricelist" isclickable="true"></vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'Currency'" field="'CurrencySymbol'" type="'Text'"></vr-datagridcolumn>
 </vr-datagrid>
