--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Views/CarrierAccount/CarrierProfileManagement.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Views/CarrierAccount/CarrierProfileManagement.html
@@ -1,4 +1,4 @@
-﻿<vr-panel ng-controller="WhS_BE_CarrierProfileManagementController" >
+﻿<vr-panel ng-controller="WhS_BE_CarrierProfileManagementController">
 
     <vr-form name="formFilter">
         <div ng-hide="filterSectionCollapsed" vr-loader="isLoadingFilters">
@@ -16,9 +16,9 @@
                         <vr-common-country-selector on-ready="onCountryDirectiveReady" ismultipleselection></vr-common-country-selector>
                     </vr-columns>
                 </vr-row>
-                </vr-validationgroup>
+            </vr-validation-group>
 
-            </div>
+        </div>
 
         <vr-row removeline>
             <vr-actionbar showcollapsebutton="true" issectioncollapsed="filterSectionCollapsed">
