--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/FinancialAccount/Templates/FinancialAccountGridTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/FinancialAccount/Templates/FinancialAccountGridTemplate.html
@@ -3,7 +3,9 @@
              on-ready="scopeModel.onGridReady"
              menuactions="scopeModel.gridMenuActions"
              datasource="scopeModel.financialAccounts"
-             idfield="Entity.FinancialAccountId">
+             idfield="Entity.FinancialAccountId"
+             defaultsortdirection="'DESC'"
+             defaultsortbyfieldname="'Entity.BED'">
     <vr-datagridcolumn headertext="'ID'" field="'Entity.FinancialAccountId'" widthfactor="'10'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Financial Account Type'" field="'AccountTypeDescription'" widthfactor="'20'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'BED'" field="'Entity.BED'" type="'Date'" widthfactor="'20'"></vr-datagridcolumn>
