--- a/Vanrise/Code/Vanrise.Invoice.Web/VR_Invoice/Views/Runtime/InvoiceEmailTemplate.html
+++ b/Vanrise/Code/Vanrise.Invoice.Web/VR_Invoice/Views/Runtime/InvoiceEmailTemplate.html
@@ -23,7 +23,7 @@
                             <vr-label >Attachments</vr-label>
                         </vr-columns>
                         <vr-columns width="fullrow">
-                            <vr-datalist maxitemsperrow="3" datasource="scopeModel.attachments" >
+                            <vr-datalist maxitemsperrow="2" datasource="scopeModel.attachments" >
                                 <a style="cursor:pointer" ng-click="viewScope.scopeModel.onAttachmentItemClicked(dataItem)"> {{dataItem.AttachmentName}}</a>
                             </vr-datalist>
                         </vr-columns>
@@ -38,6 +38,16 @@
                             <vr-editor label="Body" value="scopeModel.body" isrequired="true"></vr-editor>
                         </vr-columns>
                     </vr-row>
+                    <vr-row removeline>
+                        <vr-columns width="1/3row">
+                            <vr-fileupload extension="all" value="scopeModel.uploadedAttachement" label="Upload Attachement"
+                                           on-ready="scopeModel.onUploadedAttachementFileReady" onvaluechanged="scopeModel.addUploadedAttachement">
+                            </vr-fileupload>
+                        </vr-columns>
+                    </vr-row>
+                    <vr-datalist maxitemsperrow="3" datasource="scopeModel.uploadedAttachements" autoremoveitem="true">
+                        <a href="" ng-click="viewScope.scopeModel.downloadAttachement(dataItem.fileId)">{{dataItem.fileName}}</a>
+                    </vr-datalist>
                 </vr-tab>
             </vr-tabs>
            
