Implementing save file n voice
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C43550

--- a/Vanrise/Code/Vanrise.Invoice.Web/VR_Invoice/Views/Definition/InvoiceTypeEditor.html
+++ b/Vanrise/Code/Vanrise.Invoice.Web/VR_Invoice/Views/Definition/InvoiceTypeEditor.html
@@ -57,6 +57,11 @@
                 <vr-tab header="'Invoice File Settings'">
                     <vr-row>
                         <vr-columns width="1/2row">
+                            <vr-section title="Invoice File">
+                                <vr-invoicetype-filesattachments on-ready="scopeModel.onFilesAttachmentsReady"></vr-invoicetype-filesattachments>
+                             </vr-section>
+                        </vr-columns>
+                        <vr-columns width="1/2row">
                             <vr-section title="File Name Parts">
                                 <vr-invoicetype-filenameparts on-ready="scopeModel.onFileNamePartsReady"></vr-invoicetype-filenameparts>
                             </vr-section>
