Refactored the UI behavior of sending customer pricelist emails
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C43564

--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Views/SalePriceList/SalePriceListChange.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Views/SalePriceList/SalePriceListChange.html
@@ -77,8 +77,9 @@
                         </vr-whs-be-salepricelisttype-selector>
                         <vr-switch value="scopeModel.compressPriceListFile" label="Compressed Pricelist File"></vr-switch>
                     </vr-row>
-                    <vr-row vr-loader="isLoadingPricelistTemplateSelector">
+                    <vr-row>
                         <vr-whs-be-salepricelisttemplate-selector on-ready="onPricelistTemplateSelectorReady"
+                                                                  onselectionchanged="onPriceListTemplateChanged"
                                                                   normal-col-num="6"
                                                                   isrequired="true"
                                                                   hideremoveicon="true">
