--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Views/SalePriceList/SendSalePriceList.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Views/SalePriceList/SendSalePriceList.html
@@ -12,7 +12,7 @@
                         </vr-columns>
                     </vr-row>
                 </vr-tab>
-                <vr-tab showTab="scopeModel.doCustomerPriceListsExist==false" header="'Option'">
+                <vr-tab tabobject="scopeModel.optionTab" header="'Option'">
                     <vr-row>
                         <vr-columns>
                             <vr-switch value="scopeModel.compressPriceListFile" label="Compress"></vr-switch>
@@ -25,9 +25,9 @@
     <div>
         <vr-actionbar showcollapsebutton="false" issectioncollapsed="false">
             <div transclude-to="buttons">
-                <vr-button type="SelectAll" data-onclick="scopeModel.selectAll"></vr-button>
-                <vr-button type="DeselectAll" data-onclick="scopeModel.deselectAll"></vr-button>
-                <vr-button type="SendAll" formname="formSendPriceList" data-onclick="scopeModel.sendAll" vr-disabled="scopeModel.checkSendAllButtonDisabled()"></vr-button>
+                <vr-button type="SelectAll" data-onclick="scopeModel.selectAll" ng-if="scopeModel.doCustomerPriceListsExist"></vr-button>
+                <vr-button type="DeselectAll" data-onclick="scopeModel.deselectAll" ng-if="scopeModel.doCustomerPriceListsExist"></vr-button>
+                <vr-button type="SendEmail" formname="formSendPriceList" data-onclick="scopeModel.send" ng-if="scopeModel.doCustomerPriceListsExist" vr-disabled="scopeModel.disableSendButton()"></vr-button>
                 <vr-button type="Close" data-onclick="scopeModel.close"></vr-button>
             </div>
         </vr-actionbar>
