Adding BED, EED, and Status for partner InvoiceSetting
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C43577

--- a/Vanrise/Code/Vanrise.Invoice.Web/VR_Invoice/Directives/PartnerInvoiceSetting/Templates/PartnerInvoiceSettingGridTemplate.html
+++ b/Vanrise/Code/Vanrise.Invoice.Web/VR_Invoice/Directives/PartnerInvoiceSetting/Templates/PartnerInvoiceSettingGridTemplate.html
@@ -6,4 +6,8 @@
              idfield="Entity.PartnerInvoiceSettingId">
     <vr-datagridcolumn headertext="'ID'" type="'Text'" field="'Entity.PartnerInvoiceSettingId'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Partner Name'" type="'Text'" field="'PartnerName'"></vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'Status'" type="'Text'" field="'StatusDescription'"></vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'BED'" type="'Date'" field="'BED'"></vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'EED'" type="'Date'" field="'EED'"></vr-datagridcolumn>
+
 </vr-datagrid>
